--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
-log
-status
+/.bundle/
+/.yardoc
+/_yardoc/
+/coverage/
+/doc/
+/pkg/
+/spec/reports/
+/tmp/
+
+# rspec failure tracking
+.rspec_status
